# srs-signal

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
src/srs_signal/: __init__.py
src/srs_signal/domain/: __init__.py  admission.py  dimensions.py  enums.py  limits.py  schemas.py  scoring.py  validation.py
src/srs_signal/mvp/: __init__.py  aggregation.py  aggregation_identity.py  aggregation_models.py  aggregation_normalization.py  institutions.py  models.py  review_models.py  reviews.py  state.py  store.py  workflow.py
src/srs_signal/mvp/demo/: __init__.py  catalog.py
src/srs_signal/mvp/demo/analyses/: fictional_civic_chamber.json  fictional_review_board.json  fictional_services_authority.json
src/srs_signal/mvp/demo/decisions/: fictional_civic_chamber.txt  fictional_review_board.txt  fictional_services_authority.txt
src/srs_signal/mvp/providers/: __init__.py  base.py  deterministic.py  deterministic_institution.py  institution.py
src/srs_signal/mvp/ui/: __init__.py  analyze.py  profile.py  review.py  signals.py
