[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "srs-signal"
version = "0.1.0"
description = "AI-assisted institutional accountability auditing research prototype"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.10,<3",
    "streamlit==1.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"srs_signal.mvp.demo" = ["decisions/*.txt", "analyses/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = [".", "src"]
